# shareclaw

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
benchmarks/: README.md  launch_swarm.py
docs/: integrations.md  launch-copy.md  public-launch.md
docs/releases/: v0.2.0.md
examples/bio-label-projection/: README.md  WINNING_PLAN.md  baseline_config.json  bootstrap.py  download_dataset.py  pipeline.py  requirements.txt  run_baseline.py  search_task_candidates.py  strategy.py
examples/code-quality/: README.md
examples/content-pipeline/: README.md  shared_brain.md
examples/launch-swarm/: README.md  run_demo.py
examples/ml-training/: README.md
examples/saas-growth/: README.md
examples/tiktok-growth/: README.md  execution.md
protocols/: consensus.md  events.md  handoff.md  shared_skills.md  task_queue.md
shareclaw/: __init__.py  cli.py  core.py
shareclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
skills/: README.md  ragebait-hooks.md  trend-scraping.md  video-text-overlay.md
templates/: decisions.md  events.md  execution.md  execution_log.tsv  shared_brain.md  task_queue.md
tests/: test_bio_pipeline.py  test_bio_strategy.py  test_cli.py  test_core.py  test_scripts.py
