[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shareclaw"
version = "0.2.0"
description = "Shared brain + task queue + consensus for self-improving agent swarms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"

[project.scripts]
shareclaw = "shareclaw.cli:main"
